# PRPA

./: README.md
prpa-2026/files/: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  shell.nix
prpa-2026/files/src/: Image.hpp  JobQueue.cpp  JobQueue.hpp  Otsu.cpp  Otsu.hpp  PrioritySet.cpp  PrioritySet.hpp  bench.cpp  bench_lite.cpp  bench_prioset.cpp  bench_prioset_lite.cpp  gstfilter.c  gstfilter.h  resources.cpp.in  stream.cpp  stream.cpp.old  tests_otsu.cpp  tests_prioset.cpp
